--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@
     font-size:0.7rem;
     color:#00156A;
 }
+.section-header{
+    text-align:center;
+    width:800px;
+    margin:2rem auto;
+    padding:3rem;
+}
 /* shared design end */
 /* header section start  */
 header{
@@ -102,11 +108,46 @@ header .navbar ul li a:hover{
 .header-banner-items-numbers h2{
     color:#4A42EA;
 }
-
 .header-banner-items-picture img{
     width:25rem;
 }
 /* section 1 header banner end */
+/* section 2 start  */
+.section-2{
+    width:100%;
+    height:auto;
+    background-color:#c4d0ff30;
+    padding-bottom:2rem;
+}
+.section-2-item-container{
+    max-width:900px;
+    margin:2rem auto;
+    display:flex;
+    padding:1rem;
+    gap:1rem;
+}
+.section-2-items-text{
+    background-color:rgb(255, 255, 255);
+    padding:1rem;
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items:flex-start;
+    gap:1rem;
+    border-radius:0.8rem;
+    transition:all 0.4s ease;
+}
+.section-2-items-text:hover{
+    box-shadow:2px 2px 10px rgba(0,0,0,0.1);
+}
+.section-2-items-text h4{
+    font-weight:500;
+    color:#00156A;
+}
+.section-2-items-text h6{
+    color:#4A42EA;
+}
+/* section 2 end */
 /* responsive tablet approach start  */
 @media screen and (min-width: 576px) and (max-width: 992px){
     header{
@@ -142,6 +183,27 @@ header .navbar ul li a:hover{
     }
     .header-banner-items-numbers{
         gap:1.5rem;
+    }
+    .section-2-item-container{
+        flex-direction:column;
+    }
+    .section-header{
+        width:100%;
+    }
+    .section-header h1{
+        font-size:1.2rem;
+        margin-bottom:1rem;
+    }
+    .section-header p{
+        font-size:0.9rem;
+    }
+    .section-2-item-container{
+        gap:1.5rem;
+        
+    }
+    .section-2-items-text{
+        gap:1rem;justify-content:center;
+        align-items:center;
     }
 }
 /* responsive tablet approach end */
@@ -180,6 +242,25 @@ header .navbar ul li a:hover{
     }
     .header-banner-items-numbers{
         gap:1.5rem;
+    }
+    .section-2-item-container{
+        flex-direction:column;
+    }
+    .section-header{
+        width:100%;
+    }
+    .section-header h1{
+        font-size:1.2rem;
+        margin-bottom:1rem;
+    }
+    .section-header p{
+        font-size:0.6rem;
+    }
+    .section-2-item-container{
+        gap:1.5rem;
+    }
+    .section-2-items-text{
+        gap:0.9rem;
     }
 }
 /* responsive mobile approach end */
