--- a/style.css
+++ b/style.css
@@ -258,6 +258,72 @@ header .navbar ul li a:hover{
     width:6rem;
 }
 /* section 5 end */
+/* section 6 start  */
+.section-6{
+    background-color:#c4d0ff30;
+    padding-top:1rem;
+    padding-bottom:2rem;
+}
+.section-6-items-container{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    max-width:800px;
+    height:auto;
+    margin:1rem auto;
+    padding:2rem 1rem;
+    gap:1rem;
+    border-radius:1rem;
+    border:none;
+}
+.section-6-item-text,.section-6-item-text-picture {
+    height:80vh;
+    border:none;
+    box-shadow:2px 2px 10px rgba(0,0,0,0.1);
+    width:90%;
+    border-radius:1rem;
+    display:flex;
+    flex-direction:column;
+    gap:1.5rem;
+}
+.section-6-item-text h5,.section-6-item-text-picture h5,.section-6-item-text h6,.section-6-item-text-picture h6{
+    color:#4A42EA;
+    padding:0rem 0.5rem;
+    font-weight:500;
+    cursor:pointer;
+} 
+.section-6-item-text p,.section-6-item-text-picture p{
+    padding:0rem 0.5rem;
+} 
+.section-6-item-text img{
+    width:400px;
+    height:300px;
+    margin:0rem auto;
+    background-color:#FF6969;
+    background-image:url(image/background6.png);
+    background-repeat:no-repeat;
+    background-size:contain;
+    background-position:center;
+    border:1px solid white;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    transition:all 0.4s ease;
+}
+.section-6-item-text-picture img{
+    width:400px;
+    height:300px;
+    background-color:#8ed2fcc6;
+    border:none;
+    background-image:url(image/background7.png);
+    background-repeat:no-repeat;
+    background-size:300px;
+    background-position:center;
+    border:1px solid rgba(0, 0, 0, 0);
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    transition:all 0.4s ease;
+}
+/* section 6 end */
 /* responsive tablet approach start  */
 @media screen and (min-width: 576px) and (max-width: 992px){
     header{
@@ -355,6 +421,23 @@ header .navbar ul li a:hover{
     .section-5-img{
         width:6rem;
     }
+    .section-6-items-container{
+        flex-direction:column;
+        height:auto;
+        gap:1.3rem;
+    }
+    .section-6-item-text,.section-6-item-text-picture{
+        height:auto;
+        padding-bottom:2rem;
+        gap:1.3rem;
+    }
+    .section-6-item-text img{
+        background-position:8rem 0.9rem;
+    }
+    .section-6-item-text img,.section-6-item-text-picture img{
+        width:100%;
+        background-size:50%;
+    }
 }
 /* responsive tablet approach end */
 /* responsive mobile approach start  */
@@ -451,6 +534,23 @@ header .navbar ul li a:hover{
     }
     .section-5-img{
         width:3.3rem;
+    }
+    .section-6-items-container{
+        flex-direction:column;
+        height:auto;
+        gap:1.3rem;
+    }
+    .section-6-item-text,.section-6-item-text-picture{
+        height:auto;
+        padding-bottom:2rem;
+        gap:1.3rem;
+    }
+    .section-6-item-text img{
+        background-position:0rem 1.9rem;
+    }
+    .section-6-item-text img,.section-6-item-text-picture img{
+        width:100%;
+        background-size:100%;
     }
 }
 /* responsive mobile approach end */
